# openclaw-session-monitor

./: .gitignore  PLAN.md  README.md  TEST-PLAN.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  CONFIGURATION.md  TROUBLESHOOTING.md
docs/plans/: 2026-04-07-add-status-column-test-plan.md  2026-04-07-add-status-column.md  2026-04-07-session-cleanup-test-plan.md  2026-04-07-session-cleanup.md
docs/superpowers/plans/: 2026-04-11-add-model-column.md
src/: __init__.py  cli.py  dashboard.py  models.py  monitor.py  session_parser.py
tests/: __init__.py  conftest.py  test_cleanup_cli.py  test_dashboard.py  test_models.py  test_monitor.py  test_session_parser.py
tests/fixtures/: session-active.jsonl  session-critical.jsonl  session-warning.jsonl  sessions.json
